# skillapi

./: .flake8  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  main.yml
hw/: .flake8  .isort.cfg  pytest.ini  requirements.txt
hw/parking_app/: __init__.py  app.py  models.py  routes.py
hw/parking_app/tests/: conftest.py  factories.py  test_factories.py  test_routes.py
