            [project]
name = "skillapi"
version = "0.1.0"
description = "Parking management system"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.10"
dependencies = [
    "flask==2.0.1",
    "flask-sqlalchemy==2.5.1",
    "pytest==8.3.5",
    "factory-boy==3.2.0",
    "faker==8.12.1",
    "pytest-mock==3.10.0"
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["parking_app/tests"]
python_files = "test_*.py"
python_functions = "test_*"
markers = [
    "parking: marks tests for parking functionality"
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true